force-app/main/default/objects/Linked_Loan__c/Linked_Loan__c.object-meta.xml
<CustomObject>
    <label>Linked Loan</label>
    <nameField>
        <displayFormat>LLJunction-{0000}</displayFormat>
        <label>Linked Loan Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Linked Loans</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>