force-app/main/default/objects/Linked_Loan__c/fields/Current_Loan_Balance_c__c.field-meta.xml
<CustomField>
    <fullName>Current_Loan_Balance_c__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Current Loan Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>