force-app/main/default/objects/Linked_Loan__c/fields/Current_Loan_Balance_Excluding_Deposit__c.field-meta.xml
<CustomField>
    <fullName>Current_Loan_Balance_Excluding_Deposit__c</fullName>
    <formula>Linked_Loan__r.Current_Loan_Balance_Excluding_Deposit__c</formula>
    <label>Current Loan Balance Excluding Deposit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>