force-app/main/default/objects/Linked_Loan__c/fields/Current_Loan_Record__c.field-meta.xml
<CustomField>
    <fullName>Current_Loan_Record__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Current Loan Record</label>
    <referenceTo>loan__Loan_Account__c</referenceTo>
    <relationshipLabel>Linked Loans</relationshipLabel>
    <relationshipName>Current_Loans_Records</relationshipName>
    <type>Lookup</type>
</CustomField>