force-app/main/default/objects/Linked_Loan__c/fields/Linked_Loan__c.field-meta.xml
<CustomField>
    <fullName>Linked_Loan__c</fullName>
    <label>Linked Loan</label>
    <referenceTo>loan__Loan_Account__c</referenceTo>
    <relationshipLabel>Linked Loans (Linked Loan)</relationshipLabel>
    <relationshipName>Linked_Loans</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>