force-app/main/default/objects/Linked_Loan__c/fields/Linked_Loan_Current_Loan_Balance_Excludi__c.field-meta.xml
<CustomField>
    <fullName>Linked_Loan_Current_Loan_Balance_Excludi__c</fullName>
    <formula>IF( Current_Loan_Balance_Excluding_Deposit__c&gt;0,  Current_Loan_Balance_Excluding_Deposit__c , 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Linked Loan Current Loan Balance Excludi</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>