force-app/main/default/objects/Linked_Loan__c/fields/Linked_Loan_Number__c.field-meta.xml
<CustomField>
    <fullName>Linked_Loan_Number__c</fullName>
    <displayFormat>LLJunction-{0000}</displayFormat>
    <label>Linked Loan Number</label>
    <type>AutoNumber</type>
</CustomField>