force-app/main/default/objects/Linked_Loan__c/fields/Linked_Loan_Status__c.field-meta.xml
<CustomField>
    <fullName>Linked_Loan_Status__c</fullName>
    <formula>TEXT( Linked_Loan__r.loan__Loan_Status__c )</formula>
    <label>Linked Loan Status</label>
    <type>Text</type>
</CustomField>